RESOLVED FIXED 112148
[BlackBerry] Image,ImageBuffer: add missing parameters to methods
https://bugs.webkit.org/show_bug.cgi?id=112148
Summary [BlackBerry] Image,ImageBuffer: add missing parameters to methods
Alberto Garcia
Reported 2013-03-12 07:02:20 PDT
BitmapImage::draw(), Image::drawPattern() and ImageBuffer::draw() have a BlendMode parameter since r137011. ImageBuffer::copyImage() has a ScaleBehavior parameter since r134100.
Attachments
Patch (3.79 KB, patch)
2013-03-12 07:05 PDT, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-03-12 07:05:11 PDT
Rob Buis
Comment 2 2013-03-12 08:12:03 PDT
Comment on attachment 192729 [details] Patch Ok.
WebKit Review Bot
Comment 3 2013-03-12 08:25:21 PDT
Comment on attachment 192729 [details] Patch Clearing flags on attachment: 192729 Committed r145550: <http://trac.webkit.org/changeset/145550>
WebKit Review Bot
Comment 4 2013-03-12 08:25:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.