[BlackBerry] Image,ImageBuffer: add missing parameters to methods https://bugs.webkit.org/show_bug.cgi?id=112148

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-03-12
Reviewed by Rob Buis.

BitmapImage::draw(), Image::drawPattern() and ImageBuffer::draw()
have a BlendMode parameter since r137011.

ImageBuffer::copyImage() has a ScaleBehavior parameter since r134100.

* platform/graphics/blackberry/ImageBlackBerry.cpp:
(WebCore::BitmapImage::draw):
(WebCore::Image::drawPattern):
* platform/graphics/blackberry/ImageBufferBlackBerry.cpp:
(WebCore::ImageBuffer::copyImage):
(WebCore::ImageBuffer::draw):

Canonical link: https://commits.webkit.org/130476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145550 268f45cc-cd09-0410-ab3c-d52691b4dbfc