Source/WebCore/platform/graphics/blackberry/ImageBufferBlackBerry.cpp
@@ -207,7 +207,7 @@ PlatformLayer* ImageBuffer::platformLayer() const
     return m_data.m_platformLayer.get();
 }
 
-PassRefPtr<Image> ImageBuffer::copyImage(BackingStoreCopy copyBehavior) const
+PassRefPtr<Image> ImageBuffer::copyImage(BackingStoreCopy copyBehavior, ScaleBehavior) const
 {
     // FIXME respect copyBehaviour enum.
     unsigned* imageData = new unsigned[m_size.width() * m_size.height()];
@@ -224,7 +224,7 @@ void ImageBuffer::clip(GraphicsContext* context, const FloatRect& rect) const
     context->platformContext()->addMaskLayer(rect, nativeImage);
 }
 
-void ImageBuffer::draw(GraphicsContext* context, ColorSpace styleColorSpace, const FloatRect& destRect, const FloatRect& srcRect, CompositeOperator op, bool useLowQualityScale)
+void ImageBuffer::draw(GraphicsContext* context, ColorSpace styleColorSpace, const FloatRect& destRect, const FloatRect& srcRect, CompositeOperator op, BlendMode blendMode, bool useLowQualityScale)
 {
     m_data.draw(m_context.get(), context, styleColorSpace, destRect, srcRect, op, useLowQualityScale);
 }
